--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Chester Ian Keith G. Mata Portfolio</title>
+  <title>Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,6 +26,7 @@
 
   
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/remixicon.css" rel="stylesheet">
 
   
 </head>
@@ -40,14 +41,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Chester Ian Keith</a></h1>
+        <img src="assets/img/profile-img-1s.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Chester Ian Keith G. Mata</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="#" class="upwork"><i class="bx bxl-upwork"></i></a>
+          <a href="https://web.facebook.com/KeithDev04/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/keithmata/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/cikgmata" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -67,7 +68,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h2>Chester Ian Keith G. Mata</h2>
+      <h1>Chester Ian Keith G. Mata</h1>
       <p>I'm A <span class="typed" data-typed-items="Software Developer, SQL Developer, Delphi Developer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -79,44 +80,23 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Hello there! My name is Chester Ian Keith G. Mata, and I am an experienced Delphi developer with a passion for programming and problem-solving. With a solid background in Pascal, along with extensive experience in MySQL, Java development, JavaScript, and web page building, I have honed my skills over the past several years to become a versatile and proficient developer.</p>
-<p>
-          I embarked on my programming journey five years ago, primarily focusing on Delphi and Pascal. Delphi has been my language of choice due to its robustness and versatility, enabling me to create efficient and reliable software solutions. My deep understanding of Pascal programming principles and best practices has allowed me to develop elegant and maintainable code.
-</p>
-<p>
-During my time as a Delphi developer, I have also gained significant expertise in database management using MySQL. I have successfully designed and implemented complex database structures, optimized queries for improved performance, and ensured data integrity across various projects. This experience has sharpened my skills in SQL and taught me how to efficiently interact with databases.
-</p>
-<p>
-Expanding my horizons, I delved into the world of Java development, where I have spent two years building Java applications. This transition allowed me to broaden my skill set and work on cross-platform solutions. Java has provided me with a strong foundation in object-oriented programming and introduced me to concepts such as inheritance, polymorphism, and encapsulation.
-</p>
-<p>
-Additionally, I possess proficiency in JavaScript, a language crucial for web development. I have utilized JavaScript to enhance user interfaces, implement dynamic functionality, and create interactive web experiences. JavaScript's versatility has proven invaluable in crafting engaging and responsive web applications.
-</p>
-<p>
-In the year 2020, I had the opportunity to work extensively on web page building. This experience enabled me to design and develop visually appealing and user-friendly websites. I leveraged my knowledge of HTML, CSS, and JavaScript to create captivating web pages that seamlessly integrate with back-end systems.
-</p>
-<p>
-Throughout my professional journey, I have demonstrated strong problem-solving skills, attention to detail, and the ability to collaborate effectively with teams. I thrive in dynamic environments that encourage innovation and growth. I am constantly seeking new challenges and opportunities to expand my knowledge and skill set.
-</p>
-<p>
-Thank you for taking the time to learn a bit about me. I am excited about the prospect of applying my expertise and working on exciting projects that push the boundaries of technology. If you have any inquiries or would like to discuss potential collaborations, please feel free to get in touch.</p>
+          <h2>About</h2>		  
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img-1s.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Developer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              I Have 5 Years of experience in Developing Software With VB.Net, Delphi, MySQL, MSSQL
+              I Have 8 Years of experience in Developing Software With VB.Net, Delphi, MySQL, MSSQL
             </p>
             <div class="row">
               <div class="col-lg-5">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>December 04, 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Sample Website:</strong> <span>https://soreco1.org/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone #1:</strong> <span>+63945-852-5255</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone #2:</strong> <span>+63991-727-6140</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Bulan, Sorsogon</span></li>
@@ -133,13 +113,7 @@ Thank you for taking the time to learn a bit about me. I am excited about the pr
               </div>
             </div>
             <p>
-              I am an experienced Delphi developer with 5 years of experience in Pascal programming. Alongside my Delphi expertise, I have spent 5 years working with MySQL databases, 2 years in Java development, and have proficiency in JavaScript. In 2020, I focused on web page building, utilizing HTML, CSS, and JavaScript to create visually appealing and user-friendly websites.
-
-				I have a strong problem-solving ability and pay attention to detail, ensuring robust solutions. Collaboration is important to me, and I work well as part of a team. I believe in continuous learning and staying updated with the latest technologies and programming languages.
-
-				I possess an innovative mindset, always seeking new ideas and efficient ways to solve complex problems. With a growth mindset, I embrace opportunities for personal and professional growth.
-
-				If you would like to know more about my experience or discuss potential collaborations, please feel free to reach out.
+            	Hello! I'm Chester, an experienced Delphi developer with a passion for programming and problem-solving. I have expertise in Pascal, MySQL, Java, JavaScript, and web page building. I create efficient software solutions using Delphi and have strong skills in database management. I also build cross-platform solutions in Java and develop engaging web applications using JavaScript. Let's collaborate on exciting projects! Contact me for inquiries or potential collaborations.
             </p>
           </div>
         </div>
@@ -147,12 +121,14 @@ Thank you for taking the time to learn a bit about me. I am excited about the pr
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    
+
+    <!-- ======= Interest Section ======= -->
+    <section id="Interest" class="Interest">
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>Interest</h2>
           <p>I am an experienced Delphi developer with 5 years of experience in Pascal programming. Alongside my Delphi expertise, I have spent 5 years working with MySQL databases, 2 years in Java development, and have proficiency in JavaScript. In 2020, I focused on web page building, utilizing HTML, CSS, and JavaScript to create visually appealing and user-friendly websites.</p>
         </div>
 
@@ -217,6 +193,69 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
         </div>
 
         <div class="row skills-content">
+	        
+	          <div class="card-deck">
+	          	<div class="row">
+		          	<div class="col-sm-6 col-lg-2 " data-aos="fade-up">
+					  <div class="card">
+					    <img class="card-img-top" id="skill-card" src="assets/img/Embarcadero.Delphi.png" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Delphi Development</h5>
+					    </div>
+					    <div class="card-footer">
+					      <small class="text-muted">Year : +5 Years</small>
+					    </div>
+					   </div>
+					</div>
+					<div class="col-sm-6 col-lg-2 " data-aos="fade-up">
+					  <div class="card">
+					    <img class="card-img-top" id="skill-card" src="assets/img/Embarcadero.Delphi.png" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Delphi Development</h5>
+					    </div>
+					    <div class="card-footer">
+					      <small class="text-muted">Year : +5 Years</small>
+					    </div>
+					   </div>
+					</div>
+					<div class="col-sm-6 col-lg-2 " data-aos="fade-up">
+					  <div class="card">
+					    <img class="card-img-top" id="skill-card" src="assets/img/Embarcadero.Delphi.png" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Delphi Development</h5>
+					    </div>
+					    <div class="card-footer">
+					      <small class="text-muted">Year : +5 Years</small>
+					    </div>
+					   </div>
+					</div>
+					<div class="col-sm-6 col-lg-2 " data-aos="fade-up">
+					  <div class="card">
+					    <img class="card-img-top" id="skill-card" src="assets/img/Embarcadero.Delphi.png" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Delphi Development</h5>
+					    </div>
+					    <div class="card-footer">
+					      <small class="text-muted">Year : +5 Years</small>
+					    </div>
+					   </div>
+					</div>
+					<div class="col-sm-6 col-lg-2 " data-aos="fade-up">
+					  <div class="card">
+					    <img class="card-img-top" id="skill-card" src="assets/img/Embarcadero.Delphi.png" alt="Card image cap">
+					    <div class="card-body">
+					      <h5 class="card-title">Delphi Development</h5>
+					    </div>
+					    <div class="card-footer">
+					      <small class="text-muted">Year : +5 Years</small>
+					    </div>
+					   </div>
+					</div>
+			 	</div>
+			</div>
+
+
+
 
           <div class="col-lg-6" data-aos="fade-up">
  			<div class="progress">
@@ -326,7 +365,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
+              <h4>Chester Mata</h4>
               <p><em>With a continuous learning mindset, I actively seek opportunities to expand my knowledge and skills in order to stay up-to-date with the latest technologies and industry trends. My adaptability and strong work ethic enable me to excel in dynamic environments and embrace new challenges.
 
 I invite you to review my resume for a comprehensive overview of my experience and qualifications. I am excited about the prospect of contributing my expertise to your organization and look forward to discussing how I can add value to your team. Please feel free to contact me for further information or to schedule an interview.</em></p>
@@ -651,7 +690,7 @@ I invite you to review my resume for a comprehensive overview of my experience a
                 <p>+1 5589 55488 55s</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?q=Sorsogon, Bulan, Managa-naga, purok 3, Gerona St&t=&z=14&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
