Update Icon and Carousel Color

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio</title>
+  <title>KeithDev04</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -96,10 +96,10 @@
             <div class="row">
               <div class="col-lg-5">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>December 04, 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Sample Website:</strong> <span>https://soreco1.org/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone #1:</strong> <span>+63945-852-5255</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone #2:</strong> <span>+63991-727-6140</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Dec 04, 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>KeithDev4-12.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone #1:</strong> <span>0945-852-5255</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone #2:</strong> <span>0991-727-6140</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Bulan, Sorsogon</span></li>
                 </ul>
               </div>
@@ -292,7 +292,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			 	</div>
 			</div>-->
 			<div class="slide-container swiper">
-            <div class="slide-content">
+            <div class="slide-content" >
                 <div class="card-wrapper swiper-wrapper">
                     <!--<div class="card swiper-slide">
                         <div class="image-content">
@@ -310,7 +310,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
                             <button class="button">View More</button>
                         </div>
                     </div>-->
-                    <div class="swiper-slide card">
+                    <div class="swiper-slide card" >
 			            <div class="card-content">
 			              <div class="image">
 			                <img src="assets/img/skills/Embarcadero.Delphi.png" alt="" />
