--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              <div class="media-icons">
 			                <i class="fab fa-facebook"></i>
 			                <i class="fab fa-twitter"></i>
-			                <i class="fab fa-github"></i>
+			                <a href="https://github.com/KeithDev4-12?tab=repositories&q=&type=&language=pascal&sort=" target="_blank" >
+			                	<i class="fab fa-github"></i>
+			            	</a>
 			              </div>
 
 			              <div class="name-profession">
@@ -336,20 +338,22 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Project</button>
+			                <button class="sampleProject">Sample Project</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/VB.Net.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
 			                <i class="fab fa-facebook"></i>
 			                <i class="fab fa-twitter"></i>
-			                <i class="fab fa-github"></i>
+			                <a href="https://github.com/KeithDev4-12?tab=repositories&q=&type=&language=vb.net&sort=" target="_blank" >
+			                	<i class="fab fa-github"></i>
+			                </a>
 			              </div>
 
 			              <div class="name-profession">
@@ -366,14 +370,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/Android.Developments.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -396,14 +400,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/WEB.Development.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -426,14 +430,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/MYSQL.Dev.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -456,14 +460,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/MSSQL.Dev.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -486,7 +490,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
@@ -516,7 +520,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
@@ -546,7 +550,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
@@ -576,7 +580,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
@@ -606,14 +610,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/Photoshop.Icon.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -636,14 +640,14 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
 			        <div class="swiper-slide card">
 			            <div class="card-content">
 			              <div class="image">
-			                <img src="images/profile2.jpg" alt="" />
+			                <img src="assets/img/skills/PowerDirector.png" alt="" />
 			              </div>
 
 			              <div class="media-icons">
@@ -666,7 +670,7 @@ Team Collaboration: I am an effective team player and can collaborate seamlessly
 			              </div>
 
 			              <div class="button">
-			                <button class="hireMe">Sample Projects</button>
+			                <button class="sampleProject">Sample Projects</button>
 			              </div>
 			            </div>
 			        </div>
@@ -1176,19 +1180,10 @@ I invite you to review my resume for a comprehensive overview of my experience a
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Footer ======= 
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      
     </div>
   </footer><!-- End  Footer -->
 
